k8s/overlays/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mazebank
  namespace: mazebank
  labels:
    app: mazebank
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mazebank
  template:
    metadata:
      labels:
        app: mazebank
    spec:
      containers:
        - name: mazebank
          image: mazebank:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /mazebank/actuator/health/readiness
              port: http
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /mazebank/actuator/health/liveness
              port: http
            initialDelaySeconds: 45
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
