k8s/overlays/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mazebank
  namespace: mazebank
  labels:
    app: mazebank
spec:
  selector:
    app: mazebank
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
