k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mazebank
  namespace: mazebank
spec:
  ingressClassName: nginx
  rules:
    - host: mazebank.local
      http:
        paths:
          - path: /mazebank
            pathType: Prefix
            backend:
              service:
                name: mazebank
                port:
                  number: 80
